--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  color: #444E4E;
 }
 
 .text-1 {
@@ -77,6 +78,11 @@ body {
 
 .bg-color4 {
     background: linear-gradient(to bottom, #ffffff, #f5f5f548);
+}
+
+.bg-color5 {
+    background: linear-gradient(to right, #ffe798, #ffd5a8);
+
 }
 
 
